WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28361
Layer content misplaced with compositing, z-index and overflow
https://bugs.webkit.org/show_bug.cgi?id=28361
Summary
Layer content misplaced with compositing, z-index and overflow
Simon Fraser (smfr)
Reported
2009-08-16 12:31:31 PDT
Attached testcase shows an issue with the placement of the box contents with overflow. Hovering over the white box should not cause the contents to jump around.
Attachments
Patch
(13.81 KB, patch)
2009-08-16 20:06 PDT
,
Simon Fraser (smfr)
hyatt
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-08-16 12:32:23 PDT
The contents are moving by the border with, so this is an issue with the geometry of the foreground layer.
Simon Fraser (smfr)
Comment 2
2009-08-16 20:06:55 PDT
Created
attachment 34944
[details]
Patch
Dave Hyatt
Comment 3
2009-08-17 10:29:28 PDT
Comment on
attachment 34944
[details]
Patch r=me
Eric Seidel (no email)
Comment 4
2009-08-17 16:25:20 PDT
Comment on
attachment 34944
[details]
Patch Leaving this for smfr to commit himself. He can change it to cq+ if he'd prefer the bot to land it for him.
Simon Fraser (smfr)
Comment 5
2009-08-17 20:33:35 PDT
http://trac.webkit.org/changeset/47409
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug